--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link type="text/css" media="screen" href="css/default.css"/>
+<link rel="stylesheet" type="text/css" media="screen" href="css/default.css"/>
 </head>
 <body>
 Hello, World!
