Add list of user groups and companies.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" media="screen" href="css/default.css"/>
+<title>Python in Berlin</title>
 </head>
 <body>
-Hello, World!
+
+<h1>Python in Berlin</h1>
+
+User Groups:
+
+<ul>
+<li><a href="http://www.meetup.com/Python-Users-Berlin-PUB/">Python Users Berlin</a></li>
+<li><a href="http://www.meetup.com/django-user-group-berlin/">Django User Group Berlin</a></li>
+</ul>
+
+<h2>Python Jobs in Berlin</h2>
+The following companies are using Python. Check their websites for job openings or just send over your CV.
+
+<ul>
+<li><a href="http://www.42reports.com/">42reports</a></li>
+<li><a href="http://www.ableton.com/">Ableton</a></li>
+<li><a href="http://www.adspert.net/">Adspert</a></li>
+<li><a href="http://www.celeraone.com/">CeleraOne</a></li>
+<li><a href="http://www.cloudcontrol.com/">Cloudcontrol</a></li>
+<li><a href="http://www.deliveryhero.com/">Delivery Hero</a></li>
+<li><a href="http://www.energy-profiler.org/">Energy Profiler</a></li>
+<li><a href="http://www.moccu.de/">Moccu</a></li>
+<li><a href="http://www.momox.de/">Momox</a></li>
+<li><a href="http://www.orderbird.com/">Orderbird</a></li>
+<li><a href="http://www.profitbricks.com/">ProfitBricks</a></li>
+<li><a href="http://www.txtr.com/">Txtr</a></li>
+<li><a href="http://www.viasto.com/">Viasto</a></li>
+<li><a href="http://www.votum.de/">Votum</a></li>
+<ul>
 </body>
 </html>
