Add link to the github repo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ The following companies are using Python. Check their websites for job openings 
 <li><a href="http://www.txtr.com/">Txtr</a></li>
 <li><a href="http://www.viasto.com/">Viasto</a></li>
 <li><a href="http://www.votum.de/">Votum</a></li>
-<ul>
+</ul>
+
+<a href="https://github.com/oseemann/python-berlin">Add/edit an entry</a>
 </body>
 </html>
