Add a few more entries based on job openings

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@ The following companies are using Python. Check their websites for job openings 
 <li><a href="http://www.cloudcontrol.com/">Cloudcontrol</a></li>
 <li><a href="http://www.deliveryhero.com/">Delivery Hero</a></li>
 <li><a href="http://www.energy-profiler.org/">Energy Profiler</a></li>
+<li><a href="http://www.hitfoxgroup.com/">HitFox Group</a></li>
+<li><a href="http://www.nex.to/">Nex To</a></li>
+<li><a href="http://mixd.tv/">mixd.tv</a></li>
 <li><a href="http://www.moccu.de/">Moccu</a></li>
 <li><a href="http://www.momox.de/">Momox</a></li>
 <li><a href="http://www.orderbird.com/">Orderbird</a></li>
 <li><a href="http://www.profitbricks.com/">ProfitBricks</a></li>
+<li><a href="https://tdispatch.com/">T Dispatch</a></li>
 <li><a href="http://www.txtr.com/">Txtr</a></li>
 <li><a href="http://www.viasto.com/">Viasto</a></li>
 <li><a href="http://www.votum.de/">Votum</a></li>
