--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ The following companies are using Python. Check their websites for job openings 
 <li><a href="http://mixd.tv/">mixd.tv</a></li>
 <li><a href="http://www.moccu.de/">Moccu</a></li>
 <li><a href="http://www.momox.de/">Momox</a></li>
+<li><a href="http://www.native-instruments.com/">Native Instruments</a></li>
 <li><a href="http://www.orderbird.com/">Orderbird</a></li>
 <li><a href="http://www.profitbricks.com/">ProfitBricks</a></li>
 <li><a href="https://tdispatch.com/">T Dispatch</a></li>
