--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ The following companies are using Python. Check their websites for job openings 
 <li><a href="http://www.42reports.com/">42reports</a></li>
 <li><a href="http://www.ableton.com/">Ableton</a></li>
 <li><a href="http://www.adspert.net/">Adspert</a></li>
+<li><a href="http://www.basecase.com/">BaseCase</a></li>
 <li><a href="http://www.bettermarks.com/">Bettermarks</a></li>
 <li><a href="http://www.celeraone.com/">CeleraOne</a></li>
 <li><a href="http://www.cloudcontrol.com/">Cloudcontrol</a></li>
