--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ The following companies are using Python. Check their websites for job openings 
 <li><a href="http://www.native-instruments.com/">Native Instruments</a></li>
 <li><a href="http://www.orderbird.com/">Orderbird</a></li>
 <li><a href="http://www.profitbricks.com/">ProfitBricks</a></li>
+<li><a href="https://rhodecode.com/">RhodeCode</a></li>
 <li><a href="https://tdispatch.com/">T Dispatch</a></li>
 <li><a href="http://www.txtr.com/">Txtr</a></li>
 <li><a href="http://www.viasto.com/">Viasto</a></li>
